# dteg-core

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  dteg.db  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt
.cursor/rules/: my-rule.mdc
.github/workflows/: ci.yml
docs/: development_schedule.txt  project.txt
examples/: celery_worker_example.py  csv_to_mysql.yaml  csv_transform_csv.json  csv_transform_csv.yaml  csv_transform_mysql.yaml  dbt_pipeline.yaml  orchestrator_example.py  scheduler_example.py  simple_pipeline.yaml
github/workflows/: ci.yml
src/dteg/: __init__.py  config.py
src/dteg/cli/: main.py  schedule_commands.py
src/dteg/core/: config.py  context.py  pipeline.py  plugin.py
src/dteg/extractors/: __init__.py  base.py  csv.py  mysql.py
src/dteg/loaders/: __init__.py  base.py  csv.py  mysql.py
src/dteg/orchestration/: __init__.py  orchestrator.py  scheduler.py  worker.py
src/dteg/scripts/: migrate_execution_history.py  update_schedule_next_run.py
src/dteg/transformers/: __init__.py  base.py  dbt.py  sql.py
src/dteg/utils/: logging.py  rich_utils.py  samples.py
src/dteg/web/: __init__.py  database.py  server.py
test_pipeline/: generate_sample.py  pipeline_config.yaml
test_pipeline/data/: customer_summary.csv  output.csv  sales.csv
tests/integration/: test_orchestration.py  test_pipeline.py
tests/unit/: test_cli.py  test_config.py
tests/unit/extractors/: test_csv_extractor.py  test_mysql_extractor.py
tests/unit/loaders/: test_csv_loader.py  test_mysql_loader.py
tests/unit/orchestration/: README.md  __init__.py  test_orchestrator.py  test_orchestrator_scheduler.py  test_scheduler.py  test_scheduler_persistence.py  test_worker.py
tests/unit/transformers/: __init__.py  (+2 more)
(+20 files in other folders)
